// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth services signup network error then get already exists error 1`] = `
{
  "message": "Network Error",
  "success": false,
}
`;

exports[`Auth services signup when the user already exist then get already exists error 1`] = `
{
  "message": "User already exists",
  "success": false,
}
`;

exports[`Auth services signup when the user is created successfully the return the user and access token 1`] = `
{
  "accessToken": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImphbWVzQGdtYWlsLmNvbSIsImlhdCI6MTY3MzI1MDEzNywiZXhwIjoxNjczMjUwNDM3fQ.u4ulNIxOfYKqjYFWUQzXoqWb0YCkKxRVxfPeHvDOI6k",
  "message": "Account created successfully",
  "success": true,
  "user": {
    "__v": 0,
    "_id": "63bbc5597413cc38dacdaf59",
    "active": false,
    "banned": false,
    "createdAt": "2023-01-09T07:42:17.784Z",
    "email": "james@gmail.com",
    "oauthProviders": [],
    "roles": [
      "base",
    ],
    "updatedAt": "2023-01-09T07:42:17.784Z",
    "userId": "acc_XLL2Wp8C0k0eZWpY",
    "verified": false,
  },
}
`;
